[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Start Screen/Level Select Screen/Background.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Util/SceneTransitionRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Start Screen/Level Select Screen/LevelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Start Screen/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Start Screen/Level Select Screen/locked button texture.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Start Screen/Level Select Screen/LevelSelectScreen.gd" type="Script" id=6]
[ext_resource path="res://Audio/UI/hover_over.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/UI/next_screen.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 300, 300 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.439216, 0.478431, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.137255, 0.286275, 0.364706, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.0823529, 0.211765, 0.282353, 1 )
shadow_size = 4
shadow_offset = Vector2( 3, 3 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 0.223529, 0.439216, 0.478431, 1 )
Button/colors/font_color_disabled = Color( 0.160784, 0.27451, 0.364706, 1 )
Button/colors/font_color_focus = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_hover = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_pressed = Color( 0.584314, 0.878431, 0.8, 1 )
Button/styles/disabled = SubResource( 3 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Levels" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.0
margin_top = -200.0
margin_right = 420.0
margin_bottom = 200.0
custom_constants/separation = 40

[node name="0 - 3" type="HBoxContainer" parent="Levels"]
margin_right = 840.0
margin_bottom = 180.0
custom_constants/separation = 40
alignment = 1

[node name="Tutorial" parent="Levels/0 - 3" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 180.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "0"
next_scene_path = "res://Scenes/Levels/Tutorial.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")

[node name="1" parent="Levels/0 - 3" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_top = 0.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "1"
next_scene_path = "res://Scenes/Levels/Level01.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")

[node name="2" parent="Levels/0 - 3" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_top = 0.0
margin_right = 620.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "2"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="3" parent="Levels/0 - 3" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 660.0
margin_top = 0.0
margin_right = 840.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "3"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="4 - 7" type="HBoxContainer" parent="Levels"]
margin_top = 220.0
margin_right = 840.0
margin_bottom = 400.0
custom_constants/separation = 40
alignment = 1

[node name="4" parent="Levels/4 - 7" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 180.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "4"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="5" parent="Levels/4 - 7" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_top = 0.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "5"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="6" parent="Levels/4 - 7" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_top = 0.0
margin_right = 620.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "6"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="7" parent="Levels/4 - 7" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 660.0
margin_top = 0.0
margin_right = 840.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
rect_pivot_offset = Vector2( 0, 0 )
text = "7"
next_scene_path = "res://Scenes/Testing/_demo.tscn"
transition_rect_path = NodePath("../../../SceneTransitionRect")
locked = true

[node name="Back Button" type="Button" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 126.0
margin_bottom = 88.0
focus_mode = 0
theme = SubResource( 4 )
enabled_focus_mode = 0
text = "< back"
flat = true

[node name="SceneTransitionRect" parent="." instance=ExtResource( 2 )]
next_scene_path = "res://Scenes/Start Screen/Main Screen/StartScreen.tscn"

[node name="Sounds" type="Node" parent="."]

[node name="_next_screen" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="hover_over" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="Back Button" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="Back Button" to="." method="_on_BackButton_pressed"]
